Added controller tests